--- a/contracts/vehicle_location.yaml
+++ b/contracts/vehicle_location.yaml
@@ -4,7 +4,7 @@ spec-version: 0.1.0
 name: VehicleLocationEvent
 namespace: Transit
 doc: Real-time location and status of a transit vehicle
-owner: chadgable@gable.ai
+owner: david.migl@craneww.com
 schema:
   - name: agencyId
     doc: The ID of the transit agency that operates this route.
